--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <p>Ngày nay, ta còn biết tới Thor là 1 diễn viên</p>
     <img src="image/thor-1.jpg" alt="">
     <p></p>
-    <a href="https://vi.wikipedia.org/wiki/Thor_(th%E1%BA%A7n_tho%E1%BA%A1i)">Link wikipedia</a>
+    <a href="https://vi.wikipedia.org/wiki/Thor_(th%E1%BA%A7n_tho%E1%BA%A1i)">Link wikipedia tìm hiểu về thần sấm Thor</a>
+    <h3>
+        <b><u>Bài tập ví dụ về tạo danh sách</u></b>
+    </h3>
     <ul>
         <li>
             <b>Việt Nam</b>
@@ -23,9 +26,32 @@
                 <li>Đà Nẵng</li>
             </ol>
         </li>
-        <li><b>Hoa Kỳ</b></li>
-        <li><b>Trung Quốc</b></li>
+        <li>
+            <b>Hoa Kỳ</b>
+            <ol>
+                <i>
+                    <li>New York</li>
+                    <li>Los Angeles</li>
+                    <li>Chicago</li>
+                    <li>Houston</li>
+                </i>
+            </ol>
+        </li>
+        <li>
+            <b>Trung Quốc</b>
+            <ol>
+                <i>
+                    <u>
+                        <li>Beijing</li>
+                        <li>Chongqing</li>
+                        <li>Shanghai</li>
+                        <li>Tianjin</li>
+                    </u>
+                </i>
+            </ol>
+        </li>
     </ul>
+    <h2><b><i><u>Bài tập về tạo bảng</u></i></b></h2>
     <table border="1">
         <tr>
             <th>Company</th>
@@ -33,46 +59,35 @@
             <th>Country</th>
         </tr>
         <tr>
-            <td>Alfreds Futterkiste</td>
-            <td></td>
-            <td></td>
+            <td><i>Alfreds Futterkiste</i></td>
+            <td><i>Maria Anders</i></td>
+            <td><i>Germany</i></td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td><i>Centro comercial Moctezuma</i></td>
+            <td><i>Frrancisco Chang</i></td>
+            <td><i>Mexico</i></td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td><i>Ernst Handel</i></td>
+            <td><i>Roland Mendel</i></td>
+            <td><i>Austria</i></td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td><i>Island Trading</i></td>
+            <td><i>Helen Bennett</i></td>
+            <td><i>UK</i></td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td><i>Laughing Bacchus Winecellars</i></td>
+            <td><i>Yoshi Tannamuri</i></td>
+            <td><i>Canada</i></td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td><i>Magazzini Alimentari Riuniti</i></td>
+            <td><i>Giovanni Rovelli</i></td>
+            <td><i>Italy</i></td>
         </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        
     </table>
 </body>
 </html>
