--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
             </ol>
         </li>
     </ul>
-    <h2><b><i><u>Bài tập về tạo bảng</u></i></b></h2>
+    <h2>
+        <b><i><u>Bài tập về tạo bảng</u></i></b></h2>
     <table border="1">
         <tr>
             <th>Company</th>
