--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bài tập về Web - Nguyễn Thành Nam</title>
 </head>
-<body>
+<body style="background-color:#F5F5F5;">
     <h1>Thần sấm - Thor (thần thoại)</h1>
     <p>Thor là một vị thần nổi bật được nhắc đến trong suốt lịch sử của các dân tộc German</p>
     <p>Ngày nay, ta còn biết tới Thor là 1 diễn viên</p>
-    <img src="image/thor-1.jpg" alt="">
-    <p></p>
-    <a href="https://vi.wikipedia.org/wiki/Thor_(th%E1%BA%A7n_tho%E1%BA%A1i)">Link wikipedia tìm hiểu về thần sấm Thor</a>
+    <img src="image/thor-1.jpg" alt="Thor" width="640", height="400"><br>
+    <a href="https://vi.wikipedia.org/wiki/Thor_(th%E1%BA%A7n_tho%E1%BA%A1i)" target="parent">Link wikipedia tìm hiểu về thần sấm Thor</a><br>
+    <a href="https://github.com/thanhnamzzz" target="_blank">
+    <img src="/image/haha.jpg" alt="Github thanhnamzzz" style="width:400px;height:225px;boder:0;">
+    </a>
     <h3>
         <b><u>Bài tập ví dụ về tạo danh sách</u></b>
     </h3>
