--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <img src="image/thor-1.jpg" alt="Thor" width="640", height="400"><br>
     <a href="https://vi.wikipedia.org/wiki/Thor_(th%E1%BA%A7n_tho%E1%BA%A1i)" target="parent">Link wikipedia tìm hiểu về thần sấm Thor</a><br>
     <a href="https://github.com/thanhnamzzz" target="_blank">
-    <img src="/image/haha.jpg" alt="Github thanhnamzzz" style="width:400px;height:225px;boder:0;">
+    <img src="/image/haha.jpg" alt="Github thanhnamzzz" style="width:400px;height:225px;border:0;">
     </a>
     <h3>
         <b><u>Bài tập ví dụ về tạo danh sách</u></b>
     </h3>
-    <ul>
+    <ul style="list-style-type: circle;">
         <li>
             <b>Việt Nam</b>
              <ol>
@@ -55,38 +55,38 @@
     </ul>
     <h2>
         <b><i><u>Bài tập về tạo bảng</u></i></b></h2>
-    <table border="1">
-        <tr>
-            <th>Company</th>
-            <th>Contact</th>
-            <th>Country</th>
+    <table style="border:1px; border-collapse: collapse;">
+        <tr style="background-color:#cacaca;">
+            <th style="width: 300px;">Company</th>
+            <th style="width: 150px;">Contact</th>
+            <th style="width: 150px;">Country</th>
         </tr>
-        <tr>
+        <tr style="background-color:#aaaaaa;">
             <td><i>Alfreds Futterkiste</i></td>
             <td><i>Maria Anders</i></td>
             <td><i>Germany</i></td>
         </tr>
-        <tr>
+        <tr style="background-color:#cacaca;">
             <td><i>Centro comercial Moctezuma</i></td>
             <td><i>Frrancisco Chang</i></td>
             <td><i>Mexico</i></td>
         </tr>
-        <tr>
+        <tr style="background-color:#aaaaaa;">
             <td><i>Ernst Handel</i></td>
             <td><i>Roland Mendel</i></td>
             <td><i>Austria</i></td>
         </tr>
-        <tr>
+        <tr style="background-color:#cacaca;">
             <td><i>Island Trading</i></td>
             <td><i>Helen Bennett</i></td>
             <td><i>UK</i></td>
         </tr>
-        <tr>
+        <tr style="background-color:#aaaaaa;">
             <td><i>Laughing Bacchus Winecellars</i></td>
             <td><i>Yoshi Tannamuri</i></td>
             <td><i>Canada</i></td>
         </tr>
-        <tr>
+        <tr style="background-color:#cacaca;">
             <td><i>Magazzini Alimentari Riuniti</i></td>
             <td><i>Giovanni Rovelli</i></td>
             <td><i>Italy</i></td>
