--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img src="image/thor-1.jpg" alt="Thor" width="640", height="400"><br>
     <a href="https://vi.wikipedia.org/wiki/Thor_(th%E1%BA%A7n_tho%E1%BA%A1i)" target="parent">Link wikipedia tìm hiểu về thần sấm Thor</a><br>
     <a href="https://github.com/thanhnamzzz" target="_blank">
-    <img src="image/haha.jpg" alt="Github thanhnamzzz" style="width:144px;height:81px;px;border:0;"><i><b><= Click here</b></i>
+    <img src="image/haha.jpg" alt="Github thanhnamzzz" style="width:144px;height:81px;border:0;"><i><b><= Click here</b></i>
     </a>
     <h3>
         <b><u>Bài tập ví dụ về tạo danh sách</u></b>
